--- a/CoffeeShopWebsiteAngular/CoffeeShopWebsiteAngular.Server/CoffeeShopWebsiteFrontEnd/src/app/components/login/login.component.css
+++ b/CoffeeShopWebsiteAngular/CoffeeShopWebsiteAngular.Server/CoffeeShopWebsiteFrontEnd/src/app/components/login/login.component.css
@@ -11,7 +11,7 @@
   transform: translate(-50%, -50%);
   max-width: 100%; /* Adjust width as needed */
   padding: 20px;
-  z-index:1010;
+  z-index:1;
 }
 
 
